# PlazzaMultithreaded

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildTest.sh  helper.txt  main.cpp  plazza  plazza.cpp  plazza.hpp  testPlazza.sh
Bootstrap/: CMakeLists.txt  Makefile  main.cpp
Bootstrap/include/: Counter.hpp  IMutex.hpp  ISafeQueue.hpp  SafeQueue.hpp  ScopedLock.hpp  ThreadEncaps.hpp  include.h
Bootstrap/src/: Counter.cpp  SafeQueue.cpp  ScopedLock.cpp  ThreadEncaps.cpp
Kitchen/: CondVarEncaps.cpp  CondVarEncaps.hpp  Ipc.cpp  Ipc.hpp  Kitchen.cpp  Kitchen.hpp  MutexEcapsulation.cpp  MutexEcapsulation.hpp  MutexEncapsulation.cpp  MutexEncapsulation.hpp  ProcessEncapsulation.cpp  ProcessEncapsulation.hpp  SplitString.cpp  SplitString.hpp  ThreadEncapsulation.cpp  ThreadEncapsulation.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp  testmain.cpp
Log/: log_12-05-2022.txt  log_16-05-2022.txt  log_19-05-2022.txt  log_20-05-2022.txt  log_22-05-2022.txt
LogEngine/: Log.cpp  Log.hpp
Pizza/: Pizza.cpp  Pizza.hpp
Reception/: .~lock.Menu.csv#  Menu.csv  Reception.cpp  Reception.hpp  reception.cpp  reception.hpp
Testing/: Kitchen  LogEngine  Makefile  Pizza  ThreadEncapsulation.cpp  ThreadEncapsulation.hpp  main.cpp  testBin
ipc/: ipc1
